[gd_scene load_steps=2 format=3 uid="uid://80gl0r4lkl3t"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_8doew"]

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8doew")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 38.0
offset_right = 197.0
offset_bottom = 136.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "back
"

[node name="difficulty" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hard difficulty
"

[node name="music" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music ON/OFF"

[node name="sound" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sound ON/OFF"

[connection signal="pressed" from="MarginContainer/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/difficulty" to="." method="_on_difficulty_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/sound" to="." method="_on_sound_pressed"]
